# preflight

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/cli/: formatters.py  main.py
backend/app/core/: __init__.py  bootstrap.py  config.py
backend/app/core/analyzers/: __init__.py
backend/app/core/analyzers/dataset/: __init__.py  analyzer.py  image_utils.py  metrics.py  models.py  scanner.py
backend/app/core/analyzers/training/: __init__.py  analyzer.py  metrics.py  models.py
backend/app/core/calculators/: __init__.py
backend/app/core/calculators/cost/: models.py  (+4 more)
backend/app/core/engine/: __init__.py  engine.py  models.py
backend/app/core/explainers/: __init__.py  explainer.py
backend/app/core/knowledge/: __init__.py  loader.py  models.py
backend/app/core/monitors/: __init__.py
backend/app/core/parsers/: __init__.py  training_log.py
backend/app/core/plugins/: __init__.py  base.py  registry.py
backend/app/core/predictors/: __init__.py
backend/app/core/recommenders/: __init__.py
backend/app/core/reports/: __init__.py
backend/app/core/rules/: __init__.py  evaluator.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py
backend/app/schemas/: common.py  cost.py  dataset.py  explain.py  gpu.py  monitor.py  predict.py  training.py
backend/scripts/: calibrate_duration.py  duration_runs.sample.csv  ingest_benchmarks.py  ingest_kaggle.py  update_benchmarks_yaml.py
(+130 files in other folders)
