[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preflight"
version = "0.1.0"
description = "Preflight: AI Training Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "motor>=3.6.0",
    "pillow>=10.0.0",
    "xgboost>=2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
explain = [
    "llama-cpp-python>=0.3.0",
    "huggingface_hub>=0.24.0",
]

[project.scripts]
trainwise = "app.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
